# yesno.tv-smart-contract

./: .gitignore  Anchor.toml  Cargo.toml  craco.config.js  package-lock.json  package.json
patches/blake3/: Cargo.toml
patches/constant_time_eq/: Cargo.toml
patches/toml_datetime/: Cargo.toml
patches/toml_datetime/src/: lib.rs
patches/toml_edit_0_25/: Cargo.toml
patches/toml_parser/: Cargo.toml
programs/my_first_program/: Cargo.toml
programs/my_first_program/src/: errors.rs  events.rs  lib.rs  state.rs
programs/my_first_program/src/instructions/: claim_affiliate.rs  claim_creator.rs  claim_platform.rs  claim_void.rs  claim_winner.rs  create_market.rs  dispute.rs  finalize.rs  initialize_config.rs  mod.rs  place_bet.rs  process_split_no_ref.rs  process_split_referred.rs  propose_outcome.rs  switch_side.rs  void_market.rs
src/: App.js  App.test.js  index.js  setupTests.js
src/idl/: yesno_escrow.json
src/pages/: AdminPage.js  UserPage.js
src/solana/: yesnoEscrow.js
tests/: my_first_program.ts
