[package]
name = "blake3"
version = "1.8.3"
edition = "2021"
authors = ["Jack O'Connor <oconnor663@gmail.com>", "Samuel Neves"]
build = "build.rs"
description = "the BLAKE3 hash function"
documentation = "https://docs.rs/blake3"
readme = "README.md"
license = "CC0-1.0 OR Apache-2.0 OR Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/BLAKE3-team/BLAKE3"

[lib]
name = "blake3"
path = "src/lib.rs"

[features]
default = ["std"]
digest = ["dep:digest"]
mmap = ["std", "dep:memmap2"]
neon = []
no_avx2 = []
no_avx512 = []
no_neon = []
no_sse2 = []
no_sse41 = []
prefer_intrinsics = []
pure = []
rayon = ["dep:rayon-core"]
std = ["constant_time_eq/std"]
traits-preview = ["dep:digest"]
wasm32_simd = []
zeroize = ["dep:zeroize", "arrayvec/zeroize"]

[dependencies.arrayref]
version = "0.3.5"

[dependencies.arrayvec]
version = "0.7.4"
default-features = false

[dependencies.cfg-if]
version = "1.0.0"

[dependencies.constant_time_eq]
version = "0.4.2"
default-features = false

[dependencies.digest]
version = "0.10.1"
features = ["mac"]
optional = true

[dependencies.memmap2]
version = "0.9"
optional = true

[dependencies.rayon-core]
version = "1.12.1"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
default-features = false

[dependencies.zeroize]
version = "1"
optional = true
default-features = false

[build-dependencies.cc]
version = "1.1.12"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies.cpufeatures]
version = "0.2.17"
