[package]
name = "constant_time_eq"
version = "0.4.2"
edition = "2021"
authors = ["Cesar Eduardo Barros <cesarb@cesarb.eti.br>"]
description = "Compares two equal-sized byte strings in constant time."
documentation = "https://docs.rs/constant_time_eq"
repository = "https://github.com/cesarb/constant_time_eq"
readme = "README"
keywords = ["constant_time"]
categories = ["cryptography", "no-std"]
license = "CC0-1.0 OR MIT-0 OR Apache-2.0"

[features]
default = ["std"]
std = []
count_instructions_test = []
