[package]
name = "toml_datetime"
version = "1.1.0+spec-1.1.0"
edition = "2021"
rust-version = "1.82"
description = "A TOML-compatible datetime type"
license = "MIT OR Apache-2.0"
repository = "https://github.com/toml-rs/toml"

[lib]
name = "toml_datetime"
path = "src/lib.rs"

[features]
alloc = ["serde_core?/alloc"]
default = ["std"]
serde = ["dep:serde_core"]
std = ["alloc", "serde_core?/std"]

[dependencies.serde_core]
package = "serde"
version = "1.0.225"
optional = true
default-features = false
