[package]
name = "my_first_program"
version = "0.1.0"
description = "YesNo Parimutuel Escrow — Solana smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_first_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1", features = ["token"] }

# Anchor / Solana macros use cfgs (`anchor-debug`, `custom-heap`, `target_os = "solana"`, …)
# that are not declared on this crate. Newer Rust enables `unexpected_cfgs` by default.
[lints.rust]
unexpected_cfgs = "allow"
